refactor(common): remove dead code and deprecate redundant utilities (#161)
- Remove ValidationUtils (0 production callers — dead code)
- Deprecate PaginationUtils normalizePage/normalizeSize forRemoval=true
  (callers migrated to resolvePage/resolveSize)
- Deprecate SortingUtils sort/comparing/comparingString forRemoval=true
  (5 callers inlined to bare Comparator.comparing)
- Deprecate Pipeline forRemoval=true (only 1 caller)
- Deprecate AbstractCrudWebAdapter buildCompleteListResponse forRemoval=true
  (0 callers — buildTypedListResponse is active variant)
- Add create(T) template method to AbstractGenericService
- Migrate CategoryService/FeedbackQuestionService from deprecated
  findAll(pageRequest,search,status) to findAll(Criteria)

Closes: ~80 lines removed, ~25 added (deprecation annotations + Javadoc)

Co-authored-by: rizkirachman <rizkfiaizalr@gmail.com>